@@ -1,14 +1,14 @@
 ﻿<dotnetnuke type="Package" version="5.0">
   <packages>
-    <package name="Hotcakes.Core" type="Library" version="03.00.01">
+    <package name="Hotcakes.Core" type="Library" version="03.01.00">
       <friendlyName>Hotcakes Commerce</friendlyName>
-      <description><![CDATA[Hotcakes will give your company the control it needs to create and manage your e-commerce site.]]></description>
+      <description><![CDATA[Hotcakes Commerce is an open source e-commerce CMS built for everyone on your team.]]></description>
       <iconFile>~/DesktopModules/Hotcakes/Core/Images/hcc-logo.png</iconFile>
       <owner>
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>Support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -58,7 +58,7 @@
             <attributes>
               <businessControllerClass>Hotcakes.Modules.Core.HotcakesController, Hotcakes.Modules</businessControllerClass>
               <desktopModuleID>[DESKTOPMODULEID]</desktopModuleID>
-              <upgradeVersionsList>01.00.00,01.00.07,01.05.00,01.06.00,01.07.00,01.08.00,01.09.00,01.10.00,02.00.00,02.00.01,02.00.02,02.00.03,02.00.04,02.00.05,02.00.06,03.00.00,03.00.01</upgradeVersionsList>
+              <upgradeVersionsList>01.00.00,01.00.07,01.05.00,01.06.00,01.07.00,01.08.00,01.09.00,01.10.00,02.00.00,02.00.01,02.00.02,02.00.03,02.00.04,02.00.05,02.00.06,03.00.00,03.00.01,03.01.00</upgradeVersionsList>
             </attributes>
           </eventMessage>
         </component>
@@ -193,7 +193,7 @@
             <script type="UnInstall">
               <path>Providers\DataProviders\SqlDataProvider</path>
               <name>Uninstall.SqlDataProvider</name>
-              <version>03.00.01</version>
+              <version>03.01.00</version>
             </script>
           </scripts>
         </component>
@@ -497,7 +497,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.ExtensionUrlProvider" type="Library" version="03.00.01">
+    <package name="Hotcakes.ExtensionUrlProvider" type="Library" version="03.01.00">
       <friendlyName>Hotcakes Extension Url Provider</friendlyName>
       <description><![CDATA[Hotcakes Extension Url Provider allows you to get rid of 'slug' parameter name in friednly urls]]></description>
       <iconFile>~/DesktopModules/Hotcakes/Core/Images/hcc-logo.png</iconFile>
@@ -505,7 +505,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -523,7 +523,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.AddressBook" type="Module" version="03.00.01">
+    <package name="Hotcakes.AddressBook" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Address Book</friendlyName>
       <description><![CDATA[Hotcakes Commerce address book allows your customers to save addresses used for shipping.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -531,7 +531,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -577,7 +577,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.Cart" type="Module" version="03.00.01">
+    <package name="Hotcakes.Cart" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Cart</friendlyName>
       <description><![CDATA[Hotcakes Commerce cart displays products to customers for purchase.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -585,7 +585,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -649,7 +649,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.CategoryMenu" type="Module" version="03.00.01">
+    <package name="Hotcakes.CategoryMenu" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Category Menu</friendlyName>
       <description><![CDATA[Hotcakes Commerce category menu displays categories to help customers find categorized products.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -657,7 +657,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -721,7 +721,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.CategoryViewer" type="Module" version="03.00.01">
+    <package name="Hotcakes.CategoryViewer" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Category Viewer</friendlyName>
       <description><![CDATA[Hotcakes Commerce category viewer displays a listing of categories in a visual way for customers to easily drill down to products of their choice.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -729,7 +729,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -795,7 +795,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.Checkout" type="Module" version="03.00.01">
+    <package name="Hotcakes.Checkout" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Checkout</friendlyName>
       <description><![CDATA[Hotcakes Commerce checkout allows a customer to finalize their shopping experience by purchasing the items saved in their cart.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -803,7 +803,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -897,7 +897,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.FeaturedProducts" type="Module" version="03.00.01">
+    <package name="Hotcakes.FeaturedProducts" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Featured Products</friendlyName>
       <description><![CDATA[Hotcakes Commerce featured products allows you to display products to customers that have been marked as featuresd in the product catalog.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -905,7 +905,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -969,7 +969,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.LastProductsViewed" type="Module" version="03.00.01">
+    <package name="Hotcakes.LastProductsViewed" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Last Products Viewed</friendlyName>
       <description><![CDATA[Hotcakes Commerce Last Products Viewed allows you to display the last products that a customer viewed to make it easy for them to return and purchase them.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -977,7 +977,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1041,7 +1041,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.MiniCart" type="Module" version="03.00.01">
+    <package name="Hotcakes.MiniCart" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Mini Cart</friendlyName>
       <description><![CDATA[Hotcakes Commerce Mini Cart allows you to provide a minimized cart experience, reducing the amount of things a customer sees.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -1049,7 +1049,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1113,7 +1113,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.SearchInput" type="Module" version="03.00.01">
+    <package name="Hotcakes.SearchInput" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Search Input</friendlyName>
       <description><![CDATA[Hotcakes Commerce Search Input displays a search option for customers to use to discover products in your store.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -1121,7 +1121,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1185,7 +1185,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.SkinAffiliate" type="SkinObject" version="03.00.01">
+    <package name="Hotcakes.SkinAffiliate" type="SkinObject" version="03.01.00">
       <friendlyName>HCSKINAFFILIATE SkinObject</friendlyName>
       <description><![CDATA[Hotcakes Commerce Affiliate skin object allows designers to add capabilities to handle affiliate requests on each page load without adding code to the page.]]></description>
       <iconFile>~/DesktopModules/Hotcakes/Core/Images/hcc-logo.png</iconFile>
@@ -1193,7 +1193,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1218,7 +1218,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.SkinSearch" type="SkinObject" version="03.00.01">
+    <package name="Hotcakes.SkinSearch" type="SkinObject" version="03.01.00">
       <friendlyName>HCSKINSEARCH SkinObject</friendlyName>
       <description><![CDATA[Hotcakes Commerce Search skin object allows designers to insert the store's search feature into the skin.]]></description>
       <iconFile>~/DesktopModules/Hotcakes/Core/Images/hcc-logo.png</iconFile>
@@ -1226,7 +1226,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1251,7 +1251,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.OrderHistory" type="Module" version="03.00.01">
+    <package name="Hotcakes.OrderHistory" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Order History</friendlyName>
       <description><![CDATA[Hotcakes Commerce Order History module provides a way for customers to review their past orders.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -1259,7 +1259,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1323,7 +1323,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.ProductGrid" type="Module" version="03.00.01">
+    <package name="Hotcakes.ProductGrid" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Product Grid</friendlyName>
       <description><![CDATA[Hotcakes Commerce Product Grid allows you to specify a set of products to list anywhere, in a grid layout.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -1331,7 +1331,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1393,7 +1393,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.ProductViewer" type="Module" version="03.00.01">
+    <package name="Hotcakes.ProductViewer" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Product Viewer</friendlyName>
       <description><![CDATA[Hotcakes Commerce Product Viewer module displays a chosen product to your customers.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -1401,7 +1401,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1467,7 +1467,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.ProductReviews" type="Module" version="03.00.01">
+    <package name="Hotcakes.ProductReviews" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Product Reviews</friendlyName>
       <description><![CDATA[Hotcakes Commerce Product Reviews will display related reviews for the product currently being displayed on the page.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -1475,7 +1475,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1539,7 +1539,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.ContentBlocks" type="Module" version="03.00.01">
+    <package name="Hotcakes.ContentBlocks" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Content Blocks</friendlyName>
       <description><![CDATA[Hotcakes Commerce Content Blocks module allows you to display content blocks you've created in the store admin.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -1547,7 +1547,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1611,7 +1611,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.Search" type="Module" version="03.00.01">
+    <package name="Hotcakes.Search" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Search</friendlyName>
       <description><![CDATA[Hotcakes Commerce Search Module allows you to use different settings to create a search results page for your store just the way you need it.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -1619,7 +1619,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1683,7 +1683,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.TopWeeklySellers" type="Module" version="03.00.01">
+    <package name="Hotcakes.TopWeeklySellers" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Top Weekly Sellers</friendlyName>
       <description><![CDATA[Hotcakes Commerce Top Weekly Sellers will display a listing of the 10 most popular products sold over the past week.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -1691,7 +1691,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1755,7 +1755,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.Top10Products" type="Module" version="03.00.01">
+    <package name="Hotcakes.Top10Products" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Top 10 Products</friendlyName>
       <description><![CDATA[Hotcakes Commerce Top 10 Products module will display a listing of the most popular products sold in the store in the past 10 calendar days.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -1763,7 +1763,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1827,7 +1827,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.WishList" type="Module" version="03.00.01">
+    <package name="Hotcakes.WishList" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Wish List</friendlyName>
       <description><![CDATA[Hotcakes Commerce Wish List module shows your customers products that have been added to their wish list for purchase later.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -1835,7 +1835,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1881,7 +1881,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.AffiliateRegistration" type="Module" version="03.00.01">
+    <package name="Hotcakes.AffiliateRegistration" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Affiliate Registration</friendlyName>
       <friendlyName>Hotcakes Wish List</friendlyName>
       <description><![CDATA[Hotcakes Commerce Affiliate Registration module.]]></description>
@@ -1890,7 +1890,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1936,7 +1936,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.AffiliateDashboard" type="Module" version="03.00.01">
+    <package name="Hotcakes.AffiliateDashboard" type="Module" version="03.01.00">
       <friendlyName>Hotcakes Affiliate Dashboard</friendlyName>
       <description><![CDATA[Hotcakes Commerce Affiliate Dashboard.]]></description>
       <iconFile>Core/Images/hcc-logo.png</iconFile>
@@ -1944,7 +1944,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
@@ -1990,7 +1990,7 @@
       </components>
     </package>
 
-    <package name="Hotcakes.ControlPanel" type="Provider" version="03.00.01">
+    <package name="Hotcakes.ControlPanel" type="Provider" version="03.01.00">
       <friendlyName>Hotcakes Control Panel</friendlyName>
       <description>Hotcakes Control Panel</description>
       <iconFile>~/DesktopModules/Hotcakes/Core/Images/hcc-logo.png</iconFile>
@@ -1998,7 +1998,7 @@
         <name>Hotcakes Commerce</name>
         <organization>Hotcakes Commerce, LLC</organization>
         <url>https://hotcakes.org</url>
-        <email>support@HotcakesCommerce.com</email>
+        <email>info@HotcakesCommerce.com</email>
       </owner>
       <license src="License.txt" />
       <releaseNotes src="ReleaseNotes.txt" />
